media/libmms: rebuilt for 1.7
git-svn-id: https://cygwin-ports.svn.sourceforge.net/svnroot/cygwin-ports/ports/trunk@7134 e127d73d-b18e-4ae1-a744-a22e6a3ccd30

--- a/README
+++ b/README
@@ -6,20 +6,21 @@ over the web. LibMMS itself is only for receiving MMS stream, it
 doesn't handle sending at all.
 
 Runtime requirements:
-  cygwin-1.5.25-15
-  libglib2.0_0-2.18.3-1
+  cygwin-1.7.0-50
+  libgcc1-4.3.2-2
+  libglib2.0_0-2.20.4-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  autoconf2.5-2.63-1
-  automake1.10-1.10.1-1
-  binutils-20080624-2
-  cygport-0.4.3-1
-  gawk-3.1.6-1
-  gcc-core-3.4.4-3
-  libtool-2.2.6a-1
-  make-3.81-1
-  pkg-config-0.23a-2
+  autoconf2.5-2.63-10
+  automake1.10-1.10.2-10
+  binutils-2.19.51-1
+  cygport-0.9.7-1
+  gawk-3.1.6-2
+  gcc4-core-4.3.2-2
+  libtool-2.2.7a-13
+  make-3.81-2
+  pkg-config-0.23b-10
   sed-4.1.5-2
 
 Canonical website:
@@ -48,14 +49,13 @@ Files included in the binary packages:
 
 (libmms0)
   /usr/bin/cygmms-0.dll
-  /usr/share/doc/libmms-0.2/AUTHORS
-  /usr/share/doc/libmms-0.2/ChangeLog
-  /usr/share/doc/libmms-0.2/COPYING.LIB
-  /usr/share/doc/libmms-0.2/INSTALL
-  /usr/share/doc/libmms-0.2/NEWS
-  /usr/share/doc/libmms-0.2/README
-  /usr/share/doc/libmms-0.2/README.LICENSE
-  /usr/share/doc/libmms-0.2/TODO
+  /usr/share/doc/libmms/AUTHORS
+  /usr/share/doc/libmms/ChangeLog
+  /usr/share/doc/libmms/COPYING.LIB
+  /usr/share/doc/libmms/NEWS
+  /usr/share/doc/libmms/README
+  /usr/share/doc/libmms/README.LICENSE
+  /usr/share/doc/libmms/TODO
 
 (libmms-devel)
   /usr/include/libmms/bswap.h
@@ -71,20 +71,8 @@ Files included in the binary packages:
 
 Port Notes:
 
------ version 0.4-2 -----
-Rebuilt with Gentoo patches.
-
------ version 0.4-1 -----
-Version bump.
-
------ version 0.3-1 -----
-Version bump, built with cygport.
-
------ version 0.2-1 -----
-Version bump.
-
------ version 0.1-1 -----
-Initial release for Cygwin.
+----- version 0.4-10 -----
+Initial release for Cygwin 1.7.
 
 
 Cygwin port maintained by:
